--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel = "stylesheet" href = "Wiki.css">
+    <link rel = "stylesheet" href = "style.css">
     <title>Грэпплинг</title>
 
     </head>
